Digit counting now working

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,4 @@ endmacro()
 package_add_test(utility_test src/utility.cpp)
 package_add_test(parse_test src/parse.cpp)
 package_add_test(format_test src/format.cpp)
+package_add_test(format_decimal_test src/format_decimal.cpp)
