Modify CMakeLists to be able to easily include library in other projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,22 +3,25 @@ project(nanofmt)
 
 set(CMAKE_CXX_STANDARD 20)
 
-
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
-
 add_library(nanofmt src/serialize.cpp)
 target_include_directories(nanofmt PUBLIC include)
 
+get_directory_property(hasParent PARENT_DIRECTORY)
+if(!hasParent)
+    #
+    # Build as standalone project
+    #
 
-add_subdirectory(examples)
+    option(PACKAGE_TESTS "Build the tests" ON)
+    if(PACKAGE_TESTS)
+        enable_testing()
+        include(GoogleTest)
+        add_subdirectory(test)
+    endif()
 
-
-option(PACKAGE_TESTS "Build the tests" ON)
-if(PACKAGE_TESTS)
-    enable_testing()
-    include(GoogleTest)
-    add_subdirectory(test)
+    add_subdirectory(examples)
 endif()
