Fix unit tests (#2)
* Fix top level project detection

* Remove .vscode

* Fix broken tests

* Modify CMakeLists.txt

* Add .cache/ to gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.21)
 project(nanofmt)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
@@ -10,8 +12,7 @@ endif()
 add_library(nanofmt src/serialize.cpp)
 target_include_directories(nanofmt PUBLIC include)
 
-get_directory_property(hasParent PARENT_DIRECTORY)
-if(!hasParent)
+if(PROJECT_IS_TOP_LEVEL)
     #
     # Build as standalone project
     #
