--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: apt-get update -y && apt-get install -y cmake
+      run: sudo apt-get update -y && sudo apt-get install -y cmake
   
     - name: Initialize submodules
       working-directory: ${{github.workspace}}
